Fix alignment of project selector

--- a/theme/_styles.scss
+++ b/theme/_styles.scss
@@ -4,7 +4,7 @@
 .navbar-brand {
 
   // The 114 is a legacy value to push the context-menu over
-  padding-right: 0px;
+  padding-right: 7px;
   margin-left: -27px !important;
 }
 
